crates/tui/src/ui/snapshots/mxr_tui__ui__send_confirm_modal__tests__safety_modal_blocker.snap
---
source: crates/tui/src/ui/send_confirm_modal.rs
assertion_line: 340
expression: rendered
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"        ╭ Draft Ready ─────────────────────────────────────────────────────────────────────────────────────────╮        "
"        │Send this draft?                                                                                      │        "
"        │Subject: Hello                                                                                        │        "
"        │Voice match: not scored for manual edits                                                              │        "
"        │Humanizer: scored on AI draft outputs                                                                 │        "
"        │                                                                                                      │        "
"        │Safety: BLOCKED                                                                                       │        "
"        │  [BLOCK] secret pattern detected: sk-...abcd                                                         │        "
"        │Override token: tok-abc-123                                                                           │        "
"        │Press Ctrl-O to override and send (single use).                                                       │        "
"        │                                                                                                      │        "
"        │[e] edit again   [^O] override + send   [Esc] discard                                                 │        "
"        │                                                                                                      │        "
"        ╰──────────────────────────────────────────────────────────────────────────────────────────────────────╯        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
