crates/tui/src/ui/snapshots/mxr_tui__ui__send_confirm_modal__tests__safety_modal_safe.snap
---
source: crates/tui/src/ui/send_confirm_modal.rs
expression: rendered
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"        ╭ Draft Ready ─────────────────────────────────────────────────────────────────────────────────────────╮        "
"        │Send this draft?                                                                                      │        "
"        │From: me@example.com                                                                                  │        "
"        │Subject: Hello                                                                                        │        "
"        │Voice match: not scored for manual edits                                                              │        "
"        │Humanizer: scored on AI draft outputs                                                                 │        "
"        │                                                                                                      │        "
"        │Safety: SAFE                                                                                          │        "
"        │  no issues                                                                                           │        "
"        │                                                                                                      │        "
"        │[s] send   [a] send at   [n] remind   [d] save draft                                                  │        "
"        ╰──────────────────────────────────────────────────────────────────────────────────────────────────────╯        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
